Corrected error with bottom of footer background being cut off on mobile

--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,6 @@ li{
 footer{
     margin-left: -10px;
     margin-right: -10px;
-    margin-bottom: -10px;
+    margin-bottom: -100px;
     background-color: black;
 }
